--- a/test/templates/provaCard2.html
+++ b/test/templates/provaCard2.html
@@ -14,6 +14,7 @@
             });
         };
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         .hd{
         background-image: url("static/Img/Sfondo.jpg");
@@ -147,13 +148,14 @@
 <div class="content">
     <div class="header hd">
         <div class="container hd1">
-            <img src="static/imgTest/SPESANA.png" alt="Logo" style="background-color: darkseagreen;">
+            <img src="static/imgTest/Spesana.png" alt="Logo" style="background-color: darkseagreen;">
         </div>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">SpeSana</a>
+    <img src="static/imgTest/Carrello.jpg" alt="Logo" width="40" height="40">
+    <a class="navbar-brand" href="/">SpeSana</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -164,7 +166,7 @@
             Dropdown
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="/action">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
