--- a/test/templates/provaCard2.html
+++ b/test/templates/provaCard2.html
@@ -173,6 +173,10 @@
         </li>
       </ul>
     </div>
+      <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
   </div>
 </nav>
 
@@ -198,6 +202,7 @@
             </div>
         </section>
     </div>
+</div>
 
 <div style="background-color: Black; border-top: 2px solid blue;">
     <footer>
