--- a/test/templates/provaCard2.html
+++ b/test/templates/provaCard2.html
@@ -148,7 +148,7 @@
 <div class="content">
     <div class="header hd">
         <div class="container hd1">
-            <img src="static/imgTest/Spesana.png" alt="Logo" style="background-color: darkseagreen;">
+            <img src="static/imgTest/banner-prova1.jpg" alt="Logo">
         </div>
     </div>
 
