--- a/test/templates/provaCard2.html
+++ b/test/templates/provaCard2.html
@@ -65,56 +65,58 @@
 </head>
 <body>
 
-<div class="content">
-    <div class="header hd">
-        <div class="container hd1">
-            <img src="static/imgTest/banner-prova1.jpg" alt="Logo">
+    <div class="content">
+        <div class="header hd">
+            <div class="container hd1">
+                <img src="static/imgTest/banner-prova1.jpg" alt="Logo">
+            </div>
         </div>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <img src="static/imgTest/Carrello.jpg" alt="Logo" width="40" height="40">
+            <a class="navbar-brand" href="/">SpeSana</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item" href="/product">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+              <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+    </nav>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <img src="static/imgTest/Carrello.jpg" alt="Logo" width="40" height="40">
-    <a class="navbar-brand" href="/">SpeSana</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </button>
-          <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" href="/product">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-      <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-</div>
+    <h1>Per il momento non ci sta nulla quindi non cacate er c...o</h1>
 
-<div style="background-color: Black; border-top: 2px solid blue;">
-    <footer>
-        <ul class="footerLinks">
-            <a href="https://github.com/MarcoDS97/ProjectWork" style="color: white;">GitHub</a>
-            <li>Benedetta Aversano</li>
-            <li>Marco De Sio</li>
-            <li>Armando Izaguirre</li>
-            <li>Stefano Crivella</li>
-            <li>Riccardo Benedetti</li>
-        </ul>
-        <div class="contenitoreCopyright">
-            <p>@copyright 2024</p>
-        </div>
-    </footer>
-</div>
+    <div style="background-color: Black; border-top: 2px solid blue;">
+        <footer>
+            <ul class="footerLinks">
+                <a href="https://github.com/MarcoDS97/ProjectWork" style="color: white;">GitHub</a>
+                <li>Benedetta Aversano</li>
+                <li>Marco De Sio</li>
+                <li>Armando Izaguirre</li>
+                <li>Stefano Crivella</li>
+                <li>Riccardo Benedetti</li>
+            </ul>
+            <div class="contenitoreCopyright">
+                <p>@copyright 2024</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
