--- a/test/templates/login.html
+++ b/test/templates/login.html
@@ -2,9 +2,85 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Login</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body {
+          font-family: Arial, sans-serif;
+          background-color: #f4f4f4;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+        }
+
+        .login-container {
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .login-container h2 {
+          text-align: center;
+          color: #333;
+        }
+
+        .login-form {
+          display: flex;
+          flex-direction: column;
+        }
+
+        .form-group {
+          margin-bottom: 15px;
+        }
+
+        .form-group label {
+          font-weight: bold;
+          margin-bottom: 5px;
+        }
+
+        .form-group input {
+          padding: 8px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+        }
+
+        .form-group input[type="submit"] {
+          background-color: #4caf50;
+          color: #fff;
+          cursor: pointer;
+        }
+  </style>
 </head>
 <body>
+
+    <div class="login-container">
+      <h2>Login</h2>
+      <form class="login-form" action="process_login.php" method="post">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" required>
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+
+        <div class="form-group">
+          <input type="submit" value="Login">
+        </div>
+      </form>
+        <a class="btn btn-secondary" href="/signup">Registrati</a>
+        <a class="btn btn-secondary" href="/">Torna indietro</a>
+    </div>
 
 </body>
 </html>
