--- a/test/templates/provaCard2.html
+++ b/test/templates/provaCard2.html
@@ -83,11 +83,11 @@
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                   <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
+                    Menù
                   </button>
                   <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" href="/product">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="/product">Prodotti</a></li>
+                    <li><a class="dropdown-item" href="/login">Login</a></li>
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                   </ul>
                 </li>
