--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -148,6 +148,7 @@
     <button class="btn btn-primary" type="submit">Submit form</button>
   </div>
 </form>
+    <a class="btn btn-secondary" href="/login">Torna indietro</a>
 </div>
 
 
