--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -73,40 +73,61 @@
         </div>
     </div>
     <h1 style="text-align: center">Registrazione</h1>
-    <form class="row g-2">
-  <div class="col-md-3">
-    <label for="validationServer01" class="form-label">First name</label>
-    <input type="text" style="width: min-content" class="form-control is-valid" id="validationServer01" value="Mark" required>
+    <form class="row justify-content-center">
+   <div class="col-md-4">
+   </div>
+  <div class="col-md-2">
+    <label for="validationServer01" class="form-label">Nome</label>
+    <input type="text" style="width: min-content" class="form-control is-valid" id="validationServer01" required>
     <div class="valid-feedback">
       Looks good!
     </div>
   </div>
-  <div class="col-md-3">
-    <label for="validationServer02" class="form-label">Last name</label>
-    <input type="text" style="width: min-content" class="form-control is-valid" id="validationServer02" value="Otto" required>
+  <div class="col-md-2">
+    <label for="validationServer02" class="form-label">Cognome</label>
+    <input type="text" style="width: min-content" class="form-control is-valid" id="validationServer02" required>
     <div class="valid-feedback">
       Looks good!
     </div>
   </div>
-  <div class="col-md-3">
-    <label for="validationServerUsername" class="form-label">Username</label>
-    <div class="input-group has-validation">
-      <input type="text" style="width: min-content" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
-      <div id="validationServerUsernameFeedback" class="invalid-feedback">
-        Please choose a username.
-      </div>
+    <div class="col-md-4">
+   </div>
+    <div class="col-md-4">
+   </div>
+  <div class="col-md-2">
+    <label for="validationServer05" class="form-label">Sesso</label>
+    <select class="form-select is-invalid" style="width: min-content" id="validationServer03" aria-describedby="validationServer04Feedback" required>
+      <option> </option>
+        <option> M </option>
+        <option> F </option>
+    </select>
+  </div>
+  <div class="col-md-2">
+    <label for="validationServer02" class="form-label">Età</label>
+    <select class="form-select is-invalid" style="width: min-content" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+      <option> </option>
+        <option>18</option>
+    </select>
+  </div>
+    <div class="col-md-4">
+   </div>
+  <div class="col-md-2.5">
+    <label for="validationServer02" class="form-label">Username</label>
+    <input type="text" style="width: min-content" class="form-control is-valid" id="validationServer06" value="Otto" required>
+    <div class="valid-feedback">
+      Looks good!
     </div>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-2.5">
     <label for="validationServer03" class="form-label">City</label>
     <input type="text" style="width: min-content" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
     <div id="validationServer03Feedback" class="invalid-feedback">
       Please provide a valid city.
     </div>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-2.5">
     <label for="validationServer04" class="form-label">State</label>
-    <select class="form-select is-invalid" style="width: min-content" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+    <select class="form-select is-invalid" style="width: min-content" id="validationServer07" aria-describedby="validationServer04Feedback" required>
       <option selected disabled value="">Choose...</option>
       <option>...</option>
     </select>
@@ -121,18 +142,21 @@
       Please provide a valid zip.
     </div>
   </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
+    <label for="validationServer05" class="form-label">Sesso</label>
+    <div class="col-md-0.5">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
     Maschio
   </label>
 </div>
-<div class="col-md-3">
+<div class="col-md-0.5">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
   <label class="form-check-label" for="flexRadioDefault2">
     Femmina
   </label>
 </div>
+    </div>
   <div class="col-12">
     <div class="form-check">
       <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
