--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -73,26 +73,29 @@
         </div>
     </div>
     <h1 style="text-align: center">Registrazione</h1>
+
     <form class="row justify-content-center">
+
         <div class="col-md-4">
         </div>
         <div class="col-md-2">
             <label for="validationServer01" class="form-label">Nome</label>
-            <input type="text" style="width: min-content" class="form-control" id="validationServer01"
+            <input type="text" name="nome_signup" style="width: min-content" class="form-control" id="validationServer01"
                    required>
         </div>
         <div class="col-md-2">
             <label for="validationServer02" class="form-label">Cognome</label>
-            <input type="text" style="width: min-content" class="form-control" id="validationServer02"
+            <input type="text" name="cognome_signup" style="width: min-content" class="form-control" id="validationServer02"
                    required>
         </div>
         <div class="col-md-4">
         </div>
+
         <div class="col-md-4">
         </div>
         <div class="col-md-2">
             <label for="validationServer03" class="form-label">Sesso</label>
-            <select class="form-select" style="width: min-content" id="validationServer03"
+            <select class="form-select" name="genere_signup" style="width: min-content" id="validationServer03"
                     aria-describedby="validationServer04Feedback" required>
                 <option></option>
                 <option> M</option>
@@ -101,7 +104,7 @@
         </div>
         <div class="col-md-2">
             <label for="validationServer04" class="form-label">Età</label>
-            <select class="form-select" style="width: min-content" id="validationServer04"
+            <select class="form-select" name="eta_signup" style="width: min-content" id="validationServer04"
                     aria-describedby="validationServer04Feedback" required>
                 <option></option>
                 {% for i in range(18,61) %}
@@ -111,21 +114,70 @@
         </div>
         <div class="col-md-4">
         </div>
-        <div class="col-md-4">
+
+         <div class="col-md-4">
+        </div>
+        <div class="col-md-2">
+            <label for="validationServer05" class="form-label">E-mail</label>
+           <input type="email" name="email_signup" style="width: min-content" class="form-control" id="validationServer05"
+                   required>
+        </div>
+        <div class="col-md-2">
+            <label for="validationServer06" class="form-label">Password</label>
+            <input type="password" name="password_signup" style="width: min-content" class="form-control" id="validationServer06"
+                   required>
         </div>
         <div class="col-md-4">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3"
-                       aria-describedby="invalidCheck3Feedback" required>
-                <label class="form-check-label" for="invalidCheck3">
-                    Agree to terms and conditions
-                </label>
-            </div>
+        </div>
+        
+         <div class="col-md-4">
+        </div>
+        <div class="col-md-2">
+            <label for="validationServer07" class="form-label">Altezza</label>
+           <input type="text" name="altezza_signup" style="width: min-content" class="form-control" id="validationServer07"
+                   required>
+        </div>
+        <div class="col-md-2">
+            <label for="validationServer08" class="form-label">Peso</label>
+            <input type="text" name="peso_signup" style="width: min-content" class="form-control" id="validationServer08"
+                   required>
         </div>
         <div class="col-md-4">
         </div>
-        <div class="col-12">
-            <button class="btn btn-primary" type="submit">Submit form</button>
+
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-2">
+            <label for="validationServer09" class="form-label">Obiettivo</label>
+            <select class="form-select" name="obiettivo_signup" style="width: min-content" id="validationServer09"
+                    aria-describedby="validationServer04Feedback" required>
+                <option></option>
+                <option> Dimagrire </option>
+                <option> Mantenersi in forma </option>
+                <option> Aumentare la massa muscolare </option>
+            </select>
+        </div>
+        <div class="col-md-2">
+            <label for="validationServer10" class="form-label">Livello di attività fisica</label>
+            <select class="form-select" name="livello_attivita_signup" style="width: min-content" id="validationServer10"
+                    aria-describedby="validationServer04Feedback" required>
+                <option></option>
+                <option> Sedentario </option>
+                <option> Leggermente attivo </option>
+                <option> Moderatamente attivo </option>
+                <option> Molto Attivo </option>
+
+            </select>
+        </div>
+        <div class="col-md-4">
+        </div>
+
+         <div class="col-md-4">
+        </div>
+        <div class="col-md-2 mt-3">
+            <button class="btn btn-primary" type="submit">Conferma</button>
+        </div>
+        <div class="col-md-6">
         </div>
     </form>
     <a class="btn btn-secondary" href="/login">Torna indietro</a>
