--- a/test/templates/product.html
+++ b/test/templates/product.html
@@ -173,7 +173,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
               <ul class="navbar-nav">
-                  <a class="navbar linkProd" href="/product">Prodotti</a>
+                  <a class="nav-link linkProd" href="/product">Prodotti</a>
                 <li class="nav-item dropdown">
                   <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     Account
