--- a/test/templates/provaCard2.html
+++ b/test/templates/provaCard2.html
@@ -86,7 +86,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
               <ul class="navbar-nav">
-                  <a class="navbar linkProd" href="/product">Prodotti</a>
+                  <a class="nav-link linkProd" href="/product">Prodotti</a>
                 <li class="nav-item dropdown">
                   <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     Account
@@ -107,7 +107,7 @@
     </nav>
     </div>
 
-    <h1>Per il momento non ci sta nulla quindi non cacate er c...o</h1>
+    <h1>Home</h1>
 
     <div style="background-color: Black; border-top: 2px solid blue;">
         <footer>
