--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -73,22 +73,24 @@
         </div>
     </div>
     <h1 style="text-align: center">Registrazione</h1>
-    <div class="container-fluid" style="display : flex">
     <form class="row justify-content-center">
-        <div class="col-md-4">
+        <div class="col-lg-3 col-md-3">
         </div>
-        <div class="col-md-2">
+        <div class="col-lg-2 col-md-2">
             <label for="validationServer01" class="form-label">Nome</label>
             <input type="text" name="nome_signup" style="width: min-content" class="form-control" id="validationServer01"
                    required>
+            <div class="col-lg-1 col-md-1">
         </div>
-        <div class="col-md-2">
+        </div>
+        <div class="col-lg-2 col-md-2">
             <label for="validationServer02" class="form-label">Cognome</label>
             <input type="text" name="cognome_signup" style="width: min-content" class="form-control" id="validationServer02"
                    required>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-3 col-md-3">
         </div>
+
 
         <div class="col-md-4">
         </div>
@@ -169,7 +171,6 @@
         </div>
         <div class="col-md-4">
         </div>
-
          <div class="col-md-4">
         </div>
         <div class="col-md-2 mt-3">
@@ -178,11 +179,10 @@
         <div class="col-md-6">
         </div>
         <a class="btn btn-secondary" href="/login">Torna indietro</a>
-    </form>
+        </form>
     </div>
 
 
-</div>
 
 
 <div style="background-color: Black; border-top: 2px solid blue;">
