--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -74,7 +74,7 @@
     </div>
     <h1 style="text-align: center">Registrazione</h1>
 
-    <form class="row justify-content-center">
+    <form class="row justify-content-center" action="/salva_dati" method="POST">
 
         <div class="col-md-4">
         </div>
