--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <h1 style="text-align: center">Registrazione</h1>
-    <form class="row justify-content-center">
+    <form class="row justify-content-center" action="/submit" method="POST">
         <div class="col-lg-3 col-md-3">
         </div>
         <div class="col-lg-2 col-md-2">
@@ -126,7 +126,7 @@
         <div class="col-md-2">
             <label for="validationServer06" class="form-label">Password</label>
             <input type="password" name="password_signup" style="width: min-content" class="form-control" id="validationServer06"
-                   required data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+                   required>
         </div>
         <div class="col-md-4">
         </div>
