--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -74,22 +74,19 @@
     </div>
     <h1 style="text-align: center">Registrazione</h1>
     <form class="row justify-content-center" action="/submit" method="POST">
-        <div class="col-lg-3 col-md-3">
-        </div>
+        <div class="col-lg-3 col-md-3"></div>
         <div class="col-lg-2 col-md-2">
             <label for="validationServer01" class="form-label">Nome</label>
-            <input type="text" name="nome_signup" style="width: min-content" class="form-control" id="validationServer01"
+            <input type="text" name="nome_signup" style="width: min-content;" class="form-control" id="validationServer01"
                    required>
-            <div class="col-lg-1 col-md-1">
-        </div>
+            <div class="col-lg-1 col-md-1 "></div>
         </div>
         <div class="col-lg-2 col-md-2">
             <label for="validationServer02" class="form-label">Cognome</label>
-            <input type="text" name="cognome_signup" style="width: min-content" class="form-control" id="validationServer02"
+            <input type="text" name="cognome_signup" style="width: min-content;" class="form-control" id="validationServer02"
                    required>
         </div>
-        <div class="col-lg-3 col-md-3">
-        </div>
+        <div class="col-lg-3 col-md-3"></div>
 
 
         <div class="col-md-4">
