--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -85,7 +85,7 @@
     <div class="container py-5">
         <div class="row g-5 align-items-center">
             <div class="col-md-12 col-lg-7">
-                <h4 class="mb-3 text-secondary">Nutri il tuo sapere</h4>
+                <h4 class="mb-3 text-secondary">Informazioni nutrizionali a portata di clic,</h4>
                 <h1 class="mb-5 display-3 text-primary">Scopri il potere degli alimenti</h1>
                 <div class="position-relative mx-auto">
                     <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="text"
@@ -100,13 +100,21 @@
                 <div id="carouselId" class="carousel slide position-relative" data-bs-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active rounded">
-                            <img src="static/imgTest/bg1.jpeg" class="img-fluid w-100 h-100 bg-secondary rounded"
+                            <img src="static/imgTest/home_start_info.jpeg" class="img-fluid w-100 h-100 bg-secondary rounded"
                                  alt="First slide">
-                            <a href="#" class="btn px-4 py-2 text-white rounded">Fruites</a>
+                            <a href="#" class="btn px-4 py-2 text-white rounded">Informazion</a>
                         </div>
                         <div class="carousel-item rounded">
-                            <img src="static/imgTest/bg2.jpeg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
-                            <a href="#" class="btn px-4 py-2 text-white rounded">Vesitables</a>
+                            <img src="static/imgTest/home_start_ricette.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
+                            <a href="#" class="btn px-4 py-2 text-white rounded">Ricette</a>
+                        </div>
+                        <div class="carousel-item rounded">
+                            <img src="static/imgTest/home_start_consigli.jpeg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
+                            <a href="#" class="btn px-4 py-2 text-white rounded">Consigli</a>
+                        </div>
+                        <div class="carousel-item rounded">
+                            <img src="static/imgTest/home_start_rapport.jpeg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
+                            <a href="#" class="btn px-4 py-2 text-white rounded">Rapporti</a>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselId"
@@ -382,6 +390,7 @@
     </div>
 </div>
 <!-- Featurs Section End -->
+
 <!-- Bestseller Product Start -->
 <div class="container-fluid py-5">
     <div class="container py-5">
@@ -543,7 +552,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="position-relative">
-                    <img src="static/imgTest/home_ia.png" class="img-fluid w-100 rounded" alt="">
+                    <img src="static/imgTest/home_banner_ia.png" class="img-fluid w-100 rounded" alt="">
                         </div>
                     </div>
                 </div>
