--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -27,6 +27,11 @@
 
     <!-- Template Stylesheet -->
     <link href="static/css/style.css" rel="stylesheet">
+    <style>
+        .prova {
+        display: flex
+        }
+    </style>
 </head>
 <body>
 
@@ -50,9 +55,17 @@
                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
                             data-bs-toggle="modal" data-bs-target="#searchModal"><i
                             class="fas fa-search text-primary"></i></button>
-                    <a href="#" class="my-auto">
-                        <i class="fas fa-user fa-2x"></i>
-                    </a>
+                    <div class="nav-item dropdown">
+                        <a type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                            <i class="fas fa-user fa-2x"></i>
+                        </a>
+                        <div class="dropdown-menu m-0 bg-secondary rounded-0">
+                            <a href="/login" class="dropdown-item">Login</a>
+                            <a href="#" class="dropdown-item">Il mio profilo</a>
+                            <a href="#" class="dropdown-item">Preferiti</a>
+                            <a href="/logout" class="dropdown-item">Logout</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -86,7 +99,7 @@
         <div class="row g-5 align-items-center">
             <div class="col-md-12 col-lg-7">
                 <h4 class="mb-3 text-secondary">Informazioni nutrizionali a portata di clic,</h4>
-                <h1 class="mb-5 display-3 text-primary">Scopri il potere degli alimenti</h1>
+                <h1 class="mb-5 display-3" style="color: #014017">Scopri il potere degli alimenti</h1>
                 <div class="position-relative mx-auto">
                     <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="text"
                            name="search_home_1" placeholder="Inserisci prodotto">
@@ -173,38 +186,44 @@
                     </ul>
                 </div>
             </div>
+
             <div class="tab-content">
+
                 <div id="tab-1" class="tab-pane fade show p-0 active">
-                    <div class="row g-4">
+
+                    <div class="row g-4 ">
                         <div class="col-lg-12">
                             <div class="row g-4">
+                                {% for elem in lista_nutriscore[0][:4] %}
                                 <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
+                                    <div class="rounded position-relative fruite-item d-flex flex-column">
+
                                         <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
+                                            <img src="{{elem.image_url}}"
                                                  class="img-fluid w-100 rounded-top" alt="">
                                         </div>
                                         <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
+                                             style="top: 10px; left: 10px;">A
                                         </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Grapes</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
+                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                            <h4 class="mb-0">{{elem.product_name}}</h4>
                                             <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
+                                                <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                                    <i class="fa fa-heart me-2 text-primary"></i>
+                                                </a>
+                                                <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info prodotto</a>
                                             </div>
                                         </div>
+
                                     </div>
                                 </div>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
+
                 </div>
+
                 <div id="tab-2" class="tab-pane fade show p-0">
                     <div class="row g-4">
                         <div class="col-lg-12">
