--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -151,7 +151,7 @@
                                                             <p class="mb-0">Calorie</p>
                                                         </div>
                                                         <div class="col-6">
-                                                            <p class="mb-0">manca</p>
+                                                            <p class="mb-0">{{prodotto.energy_kcal_100g}}</p>
                                                         </div>
                                                     </div>
                                                     <div class="row text-center align-items-center justify-content-center py-2">
@@ -167,7 +167,7 @@
                                                             <p class="mb-0">Grassi saturi</p>
                                                         </div>
                                                         <div class="col-6">
-                                                            <p class="mb-0">manca</p>
+                                                            <p class="mb-0">{{prodotto.saturated_fat_100g}}</p>
                                                         </div>
                                                     </div>
                                                     <div class="row text-center align-items-center justify-content-center py-2">
