--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="/shop" class="nav-item nav-link">Categorie (shop)</a>
+                    <a href="#" class="nav-item nav-link">Categorie</a>
                     <a href="/product" class="nav-item nav-link">Prodotti</a>
                     <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
                 </div>
