--- a/test/templates/login.html
+++ b/test/templates/login.html
@@ -156,7 +156,7 @@
         <!-- Login Start -->
         <div class="d-flex justify-content-center py-5">
             <div class="d-flex flex-row bg-verde-chiaro rounded form-login">
-                <form class="col p-3 mt-3 mb-3" style="border-right: 2px solid white">
+                <form class="col p-3 mt-3 mb-3" style="border-right: 2px solid white" method="POST">
                     <h6>Email</h6>
                     <input type="text" name="email_login" class="w-100 form-control border-0 py-1 mb-4" required>
                     <h6>Password</h6>
